--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,65 @@
-# Prerequisites
-*.d
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# Icon must end with two \r
+Icon
 
-# Linker output
-*.ilk
-*.map
-*.exp
 
-# Precompiled Headers
-*.gch
-*.pch
+# Thumbnails
+._*
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
+### MATLAB ###
+# Windows default autosave extension
+*.asv
 
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# OSX / *nix default autosave extension
+*.m~
+
+# Compiled MEX binaries (all platforms)
+*.mex*
+
+# Packaged app and toolbox files
+*.mlappinstall
+*.mltbx
+
+# Generated helpsearch folders
+helpsearch*/
+
+# Simulink code generation folders
+slprj/
+sccprj/
+
+# Matlab code generation folders
+codegen/
+
+# Simulink autosave extension
+*.autosave
+
+# Simulink cache files
+*.slxc
+
+# Octave session info
+octave-workspace
